# makaronLab

./: .cn.py.swp  .gitignore  .gitmodules  .project  CMakeLists.txt  LICENCE  README.md  b2d.c  cn.py  ui_editor.py  workspace.code-workspace
components/: CMakeLists.txt  components
components/4004/: CPU-4004.c  cpu4004.js
components/C65/: BoolsToByte.cc  BoolsToByte.h  Byte27SD.cc  Byte27SD.h  Byte27SDNode.cc  Byte27SDNode.h  ByteToBools.cc  ByteToBools.h  BytesToWord64.cc  BytesToWord64.h  C65.cc  C65.h  C65C02.cc  C65C02.h  C65C22.cc  C65C22.h  C74LS163A.cc  C74LS163A.h  C74LS189.cc  C74LS189.h  CAT28C256.cc  CAT28C256.h  CCLROM.cc  CCLROM.h  CDTButton.cc  CDTButton.h  CDTButtonNode.cc  CDTButtonNode.h  CMakeLists.txt  CRAM.cc  CRAM.h  CRIED.cc  CRIED.h  CRPTR.cc  CRPTR.h  CRPTRNode.cc  CRPTRNode.h  ConstByte.cc  ConstByte.h  ConstByteNode.cc  (+23 more)
components/chips/: CMakeCache.txt  CMakeLists.txt  CPCPC.cc  CPCPC.h  CPCPCNode.cc  CPCPCNode.h  Chips.cc  Chips.h  ChipsNode.h  README.md  api.h  cpc.c  run.h
components/tinyEmu/: CMakeLists.txt  tinyEmu.cc
doc/: Bens8bit.md  Bens8bitOnQ3.md  CTK.md  devLinuxWorkstation.md  kicad.log.md  kicad.md  litex.md  llvm.md  migrating.md  ngspice.md  nmigen.md  pyqt5.md  pysimplegui.md  python-c-extension.md  reasons.md  symbols.md  webassembly.md
doc/todo/: base-concepts.md
dockerfiles/: README.md
dockerfiles/mlab-dev/: Dockerfile  README.md
dockerfiles/mlab-usr/: Dockerfile
editor/: CMakeLists.txt  main.cc
editor/include/makaron/: version.h.in
examples/: save.yaml
externalTools/: .gitignore  externalTools  tinyEMU
externalTools/vasm/: vasm6502_oldstyle  vobjdump
install/: README.md  bootstrap-dev.sh  build-dist.sh  makaronLab.desktop  setup.sh
libmakaron/: CMakeLists.txt  libmakaron.cc
libmakaron/include/: include
libmakaron/include/common/: README.md  clock.h  common.h  gfx.h  shaders.glsl.h
libmakaron/include/disks/: fdd-test.h
libmakaron/include/makaron/: api.h
libmakaron/include/roms/: cpc_roms.h
mHDUI/: .gitignore  CMakeLists.txt  QHDTreeWidget.py  build.sh  consts.py  editor.py  editor.ui  run.sh  setup.py  ui_editor.py
mHDUI/doc/: tools.md  wqc.md
mHDUI/mhdui/: HDModule.py  __init__.py
mHDUI/tests/hdui/1-7segdisp/: SevenSegDispController.py
mHDUI/tests/nmigen/1-7segdisp/: SevenSegDispController.py  test.py
nMigenUI/: consts.py  editor.py  ui_editor.py
pyodide/: README.md
q3/: .gitignore  .project  build.sh  runTest.py  setup.py
q3/doc/: migrating.md  todo.md
q3/doc/problems/: P1-PythonIntTooLarge.md  P2-MonitoringPoint.md  P3-DynamicIoHandling.md  P3-ZeroOnWrite.md  P4-CrashOnMonitor.md  P5-SignalValueHandling.md  P6-MThreadingCrashOnValueType.md  P8-NoneValueHandler.md
q3/q3/: .gitignore  App.py  DetailWindow.py  EditorFrame.py  Element.py  EventSignal.py  Font.py  Label.py  Layout.py  Log.py  MainWindow.py  MainWindowTB.py  Menu.py  MenuBar.py  MessageBox.py  Module.py  ModuleFactory.py  ModuleLibraryQ3Chips.py  ModuleView.py  Object.py  Panel.py  Signal.py  Tab.py  TabPanel.py  Timer.py  __init__.py  api.py  bitutils.py  colors.py  config.py  console.py  consts.py  correlations.md  direction.py  editor.py  ionodeflags.py  moduletype.py  nodeiotype.py  q3vector.py  setup.py  (+2 more)
q3/q3/Q3Chips/: ModuleImpl6502.py  ModuleImpl6522.py  ModuleImplAT28C256.py  ModuleImplCPC.py  ModuleImplClock.py  ModuleImplRAM62256.py
q3/q3/bootstrap/: afterShow.py  beforeShow.py  boot.py  drafts.py  regCommands.py
q3/q3/bootstrap/tests/: 74ls181.py  cpu16.py  cpu16_ALU_AB_ei.py  cpu16_PC_ei.py  cpu16_RAM_ei.py  cpu16_REG.py  mlcd.py  rs.py  test1.py  test1c.py  test2.py  testAcornAtom.py
q3/q3/drivers/: driverBase.py  loader.py
q3/q3/drivers/sim/: ModuleImplElement.py  ModuleImplGraph.py  default.py
q3/q3/drivers/ui/: GraphViewImpl.py  IoLinkView.py  IoNodeView.py  ModuleViewImpl.py  PackageViewImpl.py  pyqt5.py  stypes.py  wxWidgets.py
q3/q3/sidePanel/: README.md  SidePanel.py  SidePanelLeft.py  sidePanelTest.py  sp_helpers.py  sp_math.py
q3/q3/ui/: BoxLayout.py  PushButtonWidget.py  STableWidget.py  __init__.py  colors.py  engine.py  orientation.py
q3/q3/visitors/: json.py
q3/q3c/: .gitignore  build.sh  q3c.h  q3cmodule.c  q3ctest.py  q3ctest2.py  setup.py  shared.c  wq6502.c  wq6502.h
q3/q3ds/tutorial/: runapp.py
q3/q3ds/tutorial/lesson1/: app1.py  clog.md
q3/q3ds/tutorial/lesson2/: app2.py  clog.md
q3/q3ds/tutorial/lesson3/: app3.py  clog.md
q3/q3sim/: setup.py
res/: CMakeLists.txt
wq/: .gitignore  correlations.md  editor.py  setup.py
wq.rem/: runTest.py
wq.rem/cpx/: test.py
wq.rem/wq/: DetailWindow.py  EditorFrame.py  Element.py  Label.py  Module.py  ModuleFactory.py  ModuleView.py  Panel.py  Pin.py  Signal.py  Timer.py  console.py  deltavector.py  dict.py  direction.py  prop.py  q3vector.py
wq.rem/wq/bootstrap/: boot.py  drafts.py  regCommands.py
wq.rem/wq/drivers/: loader.py
wq.rem/wq/drivers/sim/: ModuleImplElement.py  default.py
wq.rem/wq/drivers/ui/: IoLinkView.py  ModuleViewImpl.py  pyqt5.py  stypes.py  tmp.cc
wq.rem/wq/libs/: ligisim.py
wq.rem/wq/sidePanel/: SidePanel.py  SidePanelLeft.py  SidePanelState.py  sidePanelTest.py  sp_helpers.py
wq.rem/wqc/: api.h  atom.c  build.sh
wq/doc/: migrating.md
wq/wq/: App.py  DetailWindow.py  EditorFrame.py  Element.py  EventSignal.py  Font.py  Label.py  Layout.py  MainWindow.py  MdiPanel.py  Menu.py  MenuBar.py  MessageBox.py  Module.py  ModuleFactory.py  ModuleLibraryQ3Chips.py  ModuleLibraryWqc.py  ModuleView.py  Object.py  Panel.py  Pin.py  Signal.py  Tab.py  TabPanel.py  __init__.py  colors.py  console.py  consts.py  direction.py  moduletype.py  nodeiotype.py  q3vector.py  valuetype.py  wqvector.py  yaml.py
wq/wq/bootstrap/: afterShow.py  beforeShow.py  boot.py  regCommands.py  startup.py
wq/wq/drivers/: driverBase.py  loader.py
wq/wq/drivers/sim/: ModuleImplElement.py  default.py  (+4 more)
wq/wq/sidePanel/: README.md  SidePanel.py  sp_math.py
wq/wq/visitors/: json.py
wq/wqc/: .gitignore  build.sh  cpc.c  setup.py  shared.c  wq6502.c  wq6502.h  wqc.h  wqcmodule.c  wqctest.py  wqctest2.py
(+40 files in other folders)
